* w00t! Now with readme.md to index.html compilation with a working Data Exporter Bookmarklet * Now with working CSV export (only the main footage content at the moment)

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Empty project</title>
+    <title>BlackBox Plus - Bookmarklets</title>
     <meta charset="utf-8">
 <!--    <link rel="stylesheet" href="/w3css/4/w3.css">-->
 </head>
 <body>
-<div id="app"></div>
-<script src="bundle.js"></script>
+<div id="app">{{markdownContent}}</div>
+<!--<script src="bundle.js"></script>-->
 
 </body>
 </html>
