--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </ol>
 <p>Still coming:</p>
 <ol start="2">
-<li>Initial Keywording</li>
-<li>Thesaurus</li>
+<li>Initial Keywording - An image analysis system for adding some initial keywords (I&#39;m looking forward to this one)</li>
+<li>Thesaurus - An interactive, on the edit page thesaurus for finding words faster (if people are interested)</li>
 </ol>
 <p>Still to come: gif/images which explain how to use these.</p>
 <h2 id="intro">Intro</h2>
@@ -43,12 +43,8 @@ Allowing curators to focus more on adding the emotional and movement keywords.</
 <p>The <code>bookmarklet</code> looks like a bookmark but is a piece of Javascript code which runs when you click on it.
 This repo is available publicly in order for other developers to be able to review the code for any issues, learn how it works and also suggest any changes.</p>
 <h3 id="use-at-your-own-risk">Use at your own risk</h3>
-<p>Michael is a fellow stock footage film maker and also web developer.
-Michael will do what he can to ensure the code works well and doesn&#39;t cause any issues. But accepts no liabilities for any issues caused by using this. The code has been developed independently from BlackBox itself.</p>
-<p>Please note, certain services, such as the Google Machine learning calls come with associated costs. Others, like the Tensorflow model require 20MB downloads. The analytics system uploads your images and submitted keywords in order to create better trained models and improve the system overall.</p>
-<h3 id="imagery-access">Imagery Access</h3>
-<p>By using the <code>Initial Keywording</code> system you agree to provide <a href="https://www.greyphoenix.biz"><strong>G</strong>rey <strong>P</strong>hoenix <strong>P</strong>roductions</a> (the creator of the BlackBox Plus system) authorised uses to the images used and submitted keyword information.
-This information can then be used to create better quality machine learning training models and in turn better keywords.</p>
+<p>Michael is a fellow stock footage film maker and also a skilled web developer with over 10 years experience.</p>
+<p>Michael will do what he can to ensure the code works well and doesn&#39;t cause any issues. But accepts no liabilities for any issues caused by using this. The code has been developed independently from BlackBox itself.</p>
 <h2 id="full-legals">Full Legals:</h2>
 <p>Copyright © 2020 <a href="https://www.kublermdk.com/">Michael Kubler</a> of <strong>G</strong>rey <strong>P</strong>hoenix <strong>P</strong>roductions</p>
 <blockquote>
