* Added the staging version and started playing with the TensorFlow models.

--- a/staging.html
+++ b/staging.html
@@ -8,11 +8,11 @@
 <p>Drag the links below to your browser, go to <a href="https://portal.blackbox.global/">portal.blackbox.global</a> and when the page is loaded click the link and the extra functionality will be added.</p>
 <h2 id="bookmarklet-links-drag-these-to-your-browser-link-bar-">Bookmarklet Links (drag these to your browser link bar) :</h2>
 <ol>
-<li><a class="bookmarklet" href="javascript:(function () {console.debug('Loading BlackBox Plus Exporter');let script = document.createElement('script');script.src = 'https://blackboxplus.greyphoenix.biz/staging/export.js';document.head.appendChild(script);})();">BB+ Data Export - <strong>STAGING</strong></a> - Gives you CSV and JSON exports of your data. This links to the cutting edge version (so called because it might break and well, don&#39;t cut yourself using it).</li>
+<li><a class="bookmarklet" href="javascript:(function () {console.debug('Loading BlackBox Plus Exporter');let script = document.createElement('script');script.src = 'https://blackboxplus.greyphoenix.biz/staging/export.js';document.head.appendChild(script);})();"><strong>BB+ Data Export - <code>STAGING</code></strong></a> - Gives you CSV and JSON exports of your data. This links to the cutting edge version (so called because it might break and well, don&#39;t cut yourself using it).</li>
+<li><a class="bookmarklet" href="javascript:(function () {console.debug('Loading BlackBox Plus Initial Keywording - TensorFlow');let script = document.createElement('script');script.src = 'https://blackboxplus.greyphoenix.biz/staging/initialKeywordingTensorflow.js';document.head.appendChild(script);})();"><strong>BB+ Initial Keywording - <code>STAGING</code></strong></a> - An image analysis system for adding some initial keywords</li>
 </ol>
 <p>Still coming:</p>
-<ol start="2">
-<li>Initial Keywording - An image analysis system for adding some initial keywords (I&#39;m looking forward to this one)</li>
+<ol start="3">
 <li>Thesaurus - An interactive, on the edit page thesaurus for finding words faster (if people are interested)</li>
 </ol>
 <p>Still to come: gif/images which explain how to use these.</p>
