* Removed the still to come

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <ol start="3">
 <li>Thesaurus - An interactive, on the edit page thesaurus for finding words faster (if people are interested)</li>
 </ol>
-<p>Also still to come: gif/images which explain how to use these.</p>
 <h2 id="intro">Intro</h2>
 <p><a href="https://blackbox.global/">BlackBox</a> is a stock footage submission platform, community and more.</p>
 <blockquote>
@@ -40,7 +39,7 @@ Thus allowing curators to focus more on adding the emotional and movement keywor
 <p>Currently it uses TensorFlow and the MobileNet Image Classification system. Unfortunately this tends to describe a lot of things as nematodes or lighters and candles.</p>
 <p>Future enhancements include possibly using the Object Detection system called Coco SSD.</p>
 <p>Another option, if there&#39;s interest is integrating with Google&#39;s Cloud Vision API ( or Amazon&#39;s) which can produce much better results, however it will do so at a cost and you&#39;ll need to create a Google project yourself.</p>
-<p>Another option I&#39;m interested in is allowing the BlackBox community to train our own model by using our video frames and final keywords as a basis for training a better machine learning model.</p>
+<p>Yet another option I&#39;m interested in is allowing the BlackBox community to train our own model by using our video frames and final keywords as a basis for training a better machine learning model.</p>
 <p>If your not sure what curating requires then check out Victoria Smith&#39;s <a href="https://skl.sh/2MZ1hsM">Metadata Curator Skillshare course</a>. </p>
 <p><strong>Example keywording:</strong></p>
 <p><img src="images/bbox_plus_example_process_current_video_frame_with_annotations.png" alt="Example Initial Keywording usage and output"></p>
